src/ui/panels/details/snapshots/lazylora__ui__panels__details__application__tests__application_details_info_tab.snap
---
source: src/ui/panels/details/application.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"       ╭─────────────────────────────── Application Details ───────────────────────────────╮        "
"       │   Info    State    Programs                                                       │        "
"       │───────────────────────────────────────────────────────────────────────────────────│        "
"       │App ID:               1234567890                                                   │        "
"       │Status:               Active                                                       │        "
"       │                                                                                   │        "
"       │Creator:              Y76M3MSY6DKBRHBL7C3NNDXGS5IIMQVQVUAB6MP4XEMMGVF...           │        "
"       │App Address:          APPADDRESSXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX...           │        "
"       │                                                                                   │        "
"       │Global State:                                                                      │        "
"       │  Byte Slices:        10                                                           │        "
"       │  Uint64s:            5                                                            │        "
"       │                                                                                   │        "
"       │Local State:                                                                       │        "
"       │  Byte Slices:        2                                                            │        "
"       │  Uint64s:            3                                                            │        "
"       │                                                                                   │        "
"       │Extra Pages:          1                                                            │        "
"       │                                                                                   │        "
"       │Created At:           Round 30000000                                               │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │      [Tab] Switch  [↑↓] Navigate  [C] Copy  [Y] JSON  [O] Open  [Esc] Close       │        "
"       ╰───────────────────────────────────────────────────────────────────────────────────╯        "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
