src/ui/panels/details/snapshots/lazylora__ui__panels__details__application__tests__application_details_programs_tab.snap
---
source: src/ui/panels/details/application.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"       ╭─────────────────────────────── Application Details ───────────────────────────────╮        "
"       │   Info    State    Programs                                                       │        "
"       │───────────────────────────────────────────────────────────────────────────────────│        "
"       │Approval Program:                                                                  │        "
"       │  Size:                 ~54 bytes (72 chars)                                       │        "
"       │  Preview:              BCACAQAm...MQA0ARJA                                        │        "
"       │                                                                                   │        "
"       │Clear State Program:                                                               │        "
"       │  Size:                 ~3 bytes (4 chars)                                         │        "
"       │  Preview:              BIEB                                                       │        "
"       │                                                                                   │        "
"       │Extra Program Pages:    1                                                          │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │      [Tab] Switch  [↑↓] Navigate  [C] Copy  [Y] JSON  [O] Open  [Esc] Close       │        "
"       ╰───────────────────────────────────────────────────────────────────────────────────╯        "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
