src/ui/panels/details/snapshots/lazylora__ui__panels__details__application__tests__application_details_state_tab.snap
---
source: src/ui/panels/details/application.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"       ╭─────────────────────────────── Application Details ───────────────────────────────╮        "
"       │   Info    State    Programs                                                       │        "
"       │───────────────────────────────────────────────────────────────────────────────────│        "
"       │ Global State (3 entries)                                                          │        "
"       │  [] fee_collector = Y76M3MSY6DKBRHBL7C3NNDXGS5II...                               │        "
"       │  # total_supply = 1000000000                                                      │        "
"       │  # paused = 0                                                                     │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │                                                                                   │        "
"       │      [Tab] Switch  [↑↓] Navigate  [C] Copy  [Y] JSON  [O] Open  [Esc] Close       │        "
"       ╰───────────────────────────────────────────────────────────────────────────────────╯        "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
